# rust-programming-practices

./: README.md
day10/hashmap1/: Cargo.toml
day10/hashmap2/: Cargo.toml
day10/hashmap3/: Cargo.toml
day10/hashmap4/: Cargo.toml
day10/program3/: Cargo.toml
day10/string_collection/: Cargo.toml
day10/string_collection2/: Cargo.toml
day11/error_handling1/: Cargo.toml
day11/error_handling3/: Cargo.toml
day11/error_handling4/: Cargo.toml
day11/error_handling5/: Cargo.toml
day11/error_handling6/: Cargo.toml
day11/error_handling7_shortcut/: Cargo.toml
day11/error_handling8_lastchar/: Cargo.toml
day12/find_largest/: Cargo.toml
day12/generics1/: Cargo.toml
day12/program_practice/: Cargo.toml
day13/lifetime1/: Cargo.toml
day15/thread_program1/: Cargo.toml
day15/thread_program2/: Cargo.toml
day15/thread_program4/: Cargo.toml
day16/thread_program3/: Cargo.toml
day2/count_digit/: Cargo.toml
day3/accessing_element_in_array/: Cargo.toml
day3/christmas/: Cargo.toml
day3/sum_of_digit/: Cargo.toml
day3/temperature_program/: Cargo.toml
day4/area_of_rectangle_using_tuple/: Cargo.toml
day4/combining_both_ref/: Cargo.toml
day4/mutable_ref/: Cargo.toml
day4/ownership_transfer/: Cargo.toml
day4/rectangle_structure/: Cargo.toml
day4/references1/: Cargo.toml
day4/returning_multipleval/: Cargo.toml
day5/enum_complex_example/: Cargo.toml
day5/enum_example/: Cargo.toml
day5/enum_without_struct/: Cargo.toml
day5/option_enum/: Cargo.toml
project2/chat_application/: Cargo.toml  index.html
project2/chat_application/src/: main.rs
(+99 files in other folders)
